change name + small fixes